<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SeptimoFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pokemonfonts"
        android:text="@string/septimo"
        android:textSize="@dimen/large_text"
        app:layout_constraintBottom_toTopOf="@id/tv2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pokemonfonts"
        android:textSize="@dimen/medium_text"
        app:layout_constraintBottom_toTopOf="@id/irOctavo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <Button
        android:id="@+id/irOctavo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ir_octavo"
        app:layout_constraintBottom_toTopOf="@id/irNoveno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv2" />

    <Button
        android:id="@+id/irNoveno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ir_noveno"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/irOctavo" />

</androidx.constraintlayout.widget.ConstraintLayout>